*Empty MediaWiki Message*

--- a/მედინა.mw
+++ b/მედინა.mw
@@ -1,12 +1,36 @@
 [[სურათი:Prophet Mosque in Madinah.jpg|thumb|300px|წინასწარმეტყველის მეჩეთი მედინაში]]
-'''მედინა''' (არაბ.: المدينة المنورة ან المدينة; მადინაჰ) ქალაქია [[საუდის არაბეთი|საუდის არაბეთის]] ჰეიაზის რეგიონში. 2004 წლის მონაცემებით მისი მოსახლეობა 918.889 სულს შეადგენდა. კოორდინატებია 24.50° N 39.5833° E. ქალაქის თავადპირველი სახელი იყო ''იათრიბი'', თუმცა მოგვიანებით გახდა "მადინატ ალ-ნაბი" (წინასწარმეტყველის ქალაქი) ან "ალ მადინა ალ მუნავარაჰ" (გაბრწყინებული ქალაქი). შემოკლებული ფორმა "მადინა" ნიშნავს ქალაქს. მედინა [[ისლამი|ისლამის]] მეორე უწმინდესი ქალაქია, [[მექა|მექას]] შემდეგ.
+[[სურათი:Mapmadinah.jpg|thumb|300px|მედინას რუქა]]
+'''მედინა''' (არაბ.: المدينة المنورة ან المدينة; მადინაჰ) ქალაქია [[საუდის არაბეთი|საუდის არაბეთის]] ჰეიაზის რეგიონში. 2004 წლის მონაცემებით მისი მოსახლეობა 918.889 სულს შეადგენდა. კოორდინატებია 24.50° N 39.5833° E. ქალაქის თავდაპირველი სახელი იყო ''იათრიბი'', თუმცა მოგვიანებით გახდა "მადინატ ალ-ნაბი" (წინასწარმეტყველის ქალაქი) ან "ალ მადინა ალ მუნავარაჰ" (გაბრწყინებული ქალაქი). შემოკლებული ფორმა "მადინა" ნიშნავს ქალაქს. მედინა [[ისლამი|ისლამის]] მეორე უწმინდესი ქალაქია, [[მექა|მექას]] შემდეგ.
 
 ქალაქის რელიგიურ მნიშვნელობას განაპირობებს იქ მდებარე წინასწარმეტყველი [[მუჰამედი (წინასწარმეტყველი)|მუჰამედის]] აკლდამა მასჯიდ ალ-ნაბავის (ალ-ნაბავის მეჩეთი) სიახლოვეს, რომელსაც ქუბათ ან-ნაბის, ანუ წინასწარმეტყველის თაღს უწოდებენ. აკლდამა მუჰამედის სახლის გვერდზეა აშენებული. მისი სახლი მოგვიანებით მეჩეთის ნაწილი გახდა [[ხალიფი]] ალ-ვალიდ იბნ აბდელ მალეკის მიერ ჩატარებული ტაძრის გაფართოებისას. პირველი ისლამური მეჩეთიც მედინაში მდებარეობს და ცნობილია სახელით "მასჯიდ ქუბა" (ქუბის მეჩეთი).
 
 მექას მსგავსად, ქალაქ მედინაში შესვლის უფლება მხოლოდ მუსლიმანებს აქვთ. ორივე ქალაქის მრავალრიცხოვანი მეჩეთები ყოველწლიურად უამრავ მუსლიმანთა პილგრიმობის ადგილია.
 
 ==ისტორია==
+პრე-ისლამურ პერიოდში ქალაქს იათრიბი ერქვა და მნიშვნელოვანი სავაჭრო ქალაქი იყო. ქალაქის წარმართი მცხოვრებლები ყოველწლიურად მექას მიემგზავრებოდნენ უძველეს ტაძარ-აკლდამაში მოსალოცად, ვინაიდან ორივე ქალაქის მთავარი ღვთაება [[მანათი]] იყო. ქალაქში დიდი რაოდენობით არაბი ებრაელებიც ცხოვრობდნენ, თუმცა ისინი დანარჩენი მოქალაქეებისგან მხოლოდ რელიგიური ტრადიციებით გამოირჩეოდნენ.
+
+622 წელს მედინა გახდა მუჰამედის მზარდი რელიგიური მოძრაობის ცენტრი ჰიჯრას შემდეგ. იმავე წელს მუჰამედი მოწვეულ იქნა იათრიბში საცხოვრებლად და ქალაქის მმართველად. ისლამურ წყაროებზე დაყრდნობით ამ დროისთვის ქალაქში ორი განსხვავებული წარმართული სარწმუნოების მიმდევარი ხალხი (აუსი და ხაზრაჯი) და სამი ებრაული ტომი (ბანუ ქინუკაა, ბანუ ნადჰირ და ბანუ ქურაიზა) სახლობდა.
+
+ლეგენდის თანახმად იათრიბის წარმართმა ტომებმა მექაში მცხოვრები თვით-შერქმეული წინასწარმეტყველის შესახებ შეიტყვეს და გადაწყვიტეს მოეწვიათ იგი ორ ტომს შორის ჩამოვარდნილ უთანხმოებაში შუამავლობისთვის. მუჰამედი და მისი მიმდევრები შემდგომში დათანხმდნენ იათრიბში გადმოსვლაზე (ჰიჯრას მიგრაცია) და ქალაქს შედეგად ალ-მადინაჰ ალ-ნაბი, ანუ მაცნეს ქალაქი, დაერქვა, სადაც მუჰამედი [[მედინას ქარტია|მედინას ქარტიას]] სწერს და ქალაქის ლიდერი ხდება. ამავე გადმოცემის თანახმად ეს ქარტია ქალაქის ყველა ტომთან იქნა შეთანხმებული.
+
+627 წელს მექას არმია მედინაზე იერიშს იღებს აბუ სუფიანის მეთაურობით. აბუ სუფიანი მედინის აღებაში დახმარებას ადგილობრივ ებრაულ ტომს ბანუ ქუარაიზას სთხოვს. შეთანხმებით ებრაელები მუსლიმებს ზურგს უკან უნდა დასხმოდნენ ან მექას ჯარი მალულად შემოეშვათ ქალაქში. ჰადით ბუხარის მიხედვით ბანუ ქურაიზას ტომის მიერ აბუ სუფიანისთვის დახმარების გაწევა ხელშეკრულების დარღვევად იქნა მიჩნეული და საად იბნ მუადის გადაწყვეტილებით ამ ტომის ყველა მამაკაცი მოკლულ იქნა. ვინაიდან ისლამური ჰადითი რომელიც ამ მოვლენიდან ორ საუკუნეში დაიწერა ერთადერთი დღემდე შემორჩენილი წყაროა, შეუძლებელია იმის გარკვევა თუ რა პირობებში მოხდა ქალაქის სხვადასხვა ტომთა განადგურება ან გაძევება. მუჰამედი ქალაქის ყველა მცხოვრებს მოუწოდებს ისლამის რელიგიაზე მოქცევას და მედინის ქარტია მას ღვთის მოციქულად მოიხსენიებს. თუმცა მუჰამედს ქალაქის ებრაელ და ქრისტიან მცხოვრებთა დარწმუნება ისლამის როგორც იუდაიზმის ან ქრისტიანობის ჭეშმარიტ განშტოებად დარწმუნება გასჭირვებია.
+
+ჰიჯრადან ათი წლის შემდეგ მედინა ხდება მთავარი დასაყრდენი საიდანაც მუჰამედი იერიშებს აწარმოებდა და აქედან გაემართა მექაში, რომელიც მას უბრძოლველად ჩაბარდა. მთელს სახალიფოში ისლამის დამკვიდრების შემდეგაც მედინა რამდენიმე წელი ყველაზე მნიშვნელოვან ქალაქად და სახალიფოს დედაქალაქად დარჩა.
+
+პირველი ოთხი ხალიფის მმართველობის პერიოდში ისლამური იმპერია სწრაფად იზრდება და მალე მოიცავს განათლების უძველეს ისტორიულ კერებს - იერუსალიმს, დამასკოსა და ბაღდადს. მეოთხე ხალიფის, ალის გარდაცვალების შემდეგ სატახტო ქალაქი დამასკოში გადადის და მედინას, როგორც პოლიტიკური და კულტურული ცენტრის მნიშვნელობა ნელ-ნელა კლებულობს.
+
+1924 წელს ქალაქი, რომელიც ოსმალეთის ხელში იყო საუკუნეების განამვლობაში, იბნ საუდმა ჩაიგდო ხელთ, რომელიც მოგვიანებით საუდის არაბეთის პირველი მეფე გახდა.
+
+ამჟამად მედინა ქრისტიანებისთვის შეუღწევადი ქალაქია, რაც წინასწარმეტყველი მუჰამედის დროისგან განსხვავდება, ვინაიდან მის მიერ ქრისტიანებს ნებადართული ჰქონდათ ალ-ნაბავის მეჩეთში ელოცათ.
+
+==იხ. აგრეთვე==
+*[[წმინდა ქალაქები]]
+*[[მექა]]
+
 ==რესურსები ინტერნეტში==
+*[http://wikitravel.org/en/Medina მედინას მეგზური]
+*[http://maps.google.com/maps?ll=24.468313,39.611174&spn=0.007876,0.013393&t=k&hl=en მედინას სატელიტური რუქა]
+
 
 [[კატეგორია:ისლამი]]
 [[კატეგორია:წმინდა ქალაქები]]
