--- a/შარტრის_საკათედრო_ტაძარი.mw
+++ b/შარტრის_საკათედრო_ტაძარი.mw
@@ -28,7 +28,7 @@
 *[http://www.jerusalem-pedibus.net/site_fr/labyr_fr.html ლაბირინთი: გზა იერუსალიმისკენ (ფრ.)]
 
 [[კატეგორია:ქრისტიანული ტაძრები]]
-[[კატეგორია:მსოფლიო მემკვიდრეობის ძეგლები]]
+[[კატეგორია:მსოფლიო კულტურული მემკვიდრეობის ძეგლები]]
 [[კატეგორია:არქიტექტურა]]
 
 [[de:Kathedrale von Chartres]]
