*Empty MediaWiki Message*

--- a/შატილი.mw
+++ b/შატილი.mw
@@ -7,4 +7,6 @@
 
 
 
-[[კატეგორია:ქართული ხელოვნების ძეგლები]]
+[[კატეგორია:საქართველოს ხუროთმოძღვრების ძეგლები]]
+[[კატეგორია:საქართველოს ეროვნული მემკვიდრეობა]]
+[[კატეგორია:საქართველოს ეთნოგრაფიული ნიმუშების ძეგლები]]
