*Empty MediaWiki Message*

--- a/შატილი.mw
+++ b/შატილი.mw
@@ -5,7 +5,8 @@
 1970-იანი წლებში დაიწყო შატილის რესტავრაცია-ადაპტაცია (არქიტექტორები თ.აბრამიშვილი, ნ. მინდორაძე, ი. შარაშენიძე).
 
 
-
+==რესურსები ინტერნეტში== 
+[http://expeditions.iatp.ge/xevsureti.htm#5 ხევსურეთი]
 
 [[კატეგორია:საქართველოს ხუროთმოძღვრების ძეგლები]]
 [[კატეგორია:საქართველოს ეროვნული მემკვიდრეობა]]
