--- a/მცხეთის_ჯვრის_მონასტერი.mw
+++ b/მცხეთის_ჯვრის_მონასტერი.mw
@@ -11,7 +11,7 @@
 *[http://wmf.org/html/programs/resources/sitepages/georgia_jvari_monastery.html ჯვრის მონასტერი დაცვას საჭიროებს]
 
 
-[[კატეგორია:ქართული ხუროთმოძღვრების ძეგლები]]
+[[კატეგორია:საქართველოს ხუროთმოძღვრების ძეგლები]]
 [[კატეგორია:მსოფლიო კულტურული მემკვიდრეობის ძეგლები]]
 
 [[en:Jvari (monastery)]]
