--- a/შატილი.mw
+++ b/შატილი.mw
@@ -6,8 +6,8 @@
 
 
 ==რესურსები ინტერნეტში== 
-[http://expeditions.iatp.ge/xevsureti.htm#5 ხევსურეთი]
+*[http://expeditions.iatp.ge/xevsureti.htm#5 ხევსურეთი]
 
 [[კატეგორია:საქართველოს ხუროთმოძღვრების ძეგლები]]
 [[კატეგორია:საქართველოს ეროვნული მემკვიდრეობა]]
-[[კატეგორია:საქართველოს ეთნოგრაფიული ნიმუშების ძეგლები]]
+[[კატეგორია:საქართველოს ეთნოგრაფიული ძეგლები]]
