*Empty MediaWiki Message*

--- a/ალავერდი_(მრავალმნიშვნელოვანი).mw
+++ b/ალავერდი_(მრავალმნიშვნელოვანი).mw
@@ -7,7 +7,7 @@
 
 *[[ალავერდი (სომხეთი)|ალავერდი]]- ქალაქი სომხეთში
 
-*[[ალავერდი (ძეგლი)|ალავერდი]] - ქართული ხუროთმოძღვრების ძეგლი
+*[[ალავერდი (მონასტერი)|ალავერდი]] - ქართული ხუროთმოძღვრების ძეგლი
 
 
 {{მრავალმნიშვნელოვანი}}
