--- a/9_მარტი.mw
+++ b/9_მარტი.mw
@@ -3,9 +3,19 @@
 
 ==დღის მოვლენები==
 
-*[[1226]] : ჯალალედინმა აიღო თბილისი.
+*[[1226]] : [[ჯალალედინი|ჯალალედინმა]] აიღო [[თბილისი]].
+*[[1796]] : [[ბონაპარტე, ნაპოლეონ|ნაპოლეონ ბონაპარტე]] ირთავს პირველ ცოლს, [[ბოჰარნე, ჟოზეფინა|ჟოზეფინა ბოჰარნეს]].
 *[[1803]] : რუსთა და ქართველთა ჯარმა დალაშქრა ჭარ-ბელაქანი.
-
+*[[1842]] : [[ვერდი, ჯუზეპე|ვერდის]] მესამე ოპერა ნაბუკოს პრემიერა მილანში; მისი წარმატება ვერდის სამუდამოდ ამკვიდრებს იტალიის მოწინავე საოპერო მწერალთა რიგში.
+*[[1908]] : მილანის [[ინტერი (გუნდი)|ინტერი]] დაარსდა.
+*[[1945]] : [[მეორე მსოფლიო ომი]] - [[ტოკიოს დაბომბვა]] - ამერიკული B-29 მოიერიშეები ტოკიოზე ცეცხლმბად ბომბებს უშვებს. დაბომბვით გამოწვეული ცეცხლოვანი შტორმისგან 100.000-ზე მეტი ადამიანი იღუპება.
+*[[1957]] : [[ალეუტის კუნძულები|ალეუტის კუნძულებზე]] დარეგისტრირდა 9.1 მაგნიტუდის მიწისძვრა.
+*[[1959]] : [[ბარბი (თოჯინა)]] გამოვიდა წარმოებაში.
+*[[1964]] : პირველი [[ფორდ მუსტანგი]] გამოდის "ფორდ მოტორ კომპანიის" ამწყობი საამქროდან.
+*[[1967]] : [[სტალინი|სტალინის]] ქალიშვილი [[ალილუევა, სვეტლანა|სვეტლანა ალილუევა]] სსრკ-დან გარბის და აშშ-ს აფარებს თავს.
+*[[1975]] : ტრანს-ალიასკის ნავთობსადენის სისტემის მშენებლობა იწყება.
+*[[1987]] : როკ-ჯგუფი U2 უშვებს ალბომს "Joshua Tree".
+*[[1991]] : ბელგრადში იწყება სლობოდან მილოშევიჩის საწინააღმდეგო მასობრივი გამოსვლები.
 
 ==ამ დღეს დაბადებულნი==
 
