--- a/ალბერ_კამიუ.mw
+++ b/ალბერ_კამიუ.mw
@@ -2,6 +2,16 @@
 '''ალბერ კამიუ''' (Albert Camus) ([[7 ნოემბერი]], [[1913]] - [[4 იანვარი]], [[1960]]) იყო [[ფრანგები|ფრანგი]] მწერალი და ფილოსოფოსი, [[აბსურდიზმი|აბსურდიზმის]] ერთ-ერთი ყველაზე ცნობილი მიმდევარი, ლიტერატურაში ნობელის პრემიის ერთ-ერთი ყველაზე ახალგაზრდა ლაურეატი. 
 
 ==ადრეული წლები==
+დაიბადა მონოდოვიში, [[ალჟირი]], ფრანგ ალჟირელთა ოჯახში. დედა ჩამომავლობით ესპანელი იყო. მამა, ლუსიენი, მარნის ბრძოლაში დაიღუპა 1914 წელს პირველი მსოფლიო ომის დროს. ბავშვობა კამიუმ ალჟიერის ღარიბ უბანში, ბელკურში გაატარა.
+
+1923 წელს კამიუ ლიცეუმში ირიცხება, შემდეგ კი ალჟიერის უნივერსიტეტში. თუმცა 1930 წელს ტუბერკულიოზით დაავადების გამო უნივერსიტეტის საფეხბურთო გუნდიდან წასვლა და საღამოს განყოფილებაზე გადასვლა მოუწია. 1935 წელს ფილოსოფიის ბაკალავრის ხარისხს იღებს, 1936 წლის მაისში კი იცავს სამაგისტრო თეზისს პლოტინუსსა და ნეო-პლატონიზმზე.
+
+1934 წელს კამიუ საფრანგეთის კომუნისტურ პარტიაში შედის, უფრო ესპანეთის პოლიტიკური სიტუაციის გამო, ვინემ მარქსიზმ-ლენინიზმის დოქტრინიის იდეების მხარდაჭერით. 1936 წელს ალჟირის კომუნისტური პარტია ჩამოყალიბდა, რომლის მიზანი ალჟირის საფრანგეთისგან განთავისუფლება იყო. კამიუ უერთდება ალჟირის სახალხო პარტიას (Le Parti du Peuple Algérien), რის გამოც მას კომუნისტ ამხანაგებთან უთანხმოებამ მოუწია. შედეგად, ის "ტროცკისტად" გამოაცხადეს.
+
+1934 წელს კამიუ ცოლად სიმონ ჰის, ცნობილ მორფინისტს, ირთავს, თუმცა მათი ქორწინება მალევე წყდება სიმონის ღალატის გამო. 1935 წელს ის აფუძნებს "მშრომელთა თეატრს" (Théâtre du Travail, მოგვიანებით გადაერქვა Théâtre de l'Equipe), რომელმაც 1939 წლამდე იარსება. ამავე პერიოდში ის სოციალისტურ გაზეთებში მუშაობს და მათთვის პუბლიკაციებს წერს, ძირითადად გლეხთა მწირ ცხოვრებაზე. საფრანგეთის ჯარში ის ტუბერკულოზის გამო არ ჩარიცხეს.
+
+1940 წელს კამიუ ცოლად ირთავს ფრანსინ ფორს, პიანისტსა და მათემატიკოსს. 1945 წლის 5 სექტემბერს მათი ტყუპები - კათერინ და ჟან კამიუები შეეძინათ. ამავე წელს კამიუ იწყებს ჟურნალში Paris-Soir (საღამოს პარიზი). მეორე მსოფლიო ომის პირველ პერიოდში კამიუ პაციფისტია, თუმცა ის პარიზში იმყოფებოდა ვერმახტის დროს. 1941 წლის 15 დეკემბერს კამიუ გაბრიელ პერის დახვრეტის მომსწრე გახდა, რამაც დასაბამი მისცა მის გერმანელთა წინააღმდეგ ამხედრებას. მომდევნო წლებში პარი-სუას დანარჩენ თანამშრომლებთან ერთად ბორდოში გადადის. ამავე წელს ის ასრულებს თავის პირველ წიგნებს - "უცნობი" და "მითი სისიფუსზე". 1942 წელს ცოტა ხნით ორანში, ალჟირი, ბრუნდება.
+
 ==ლიტერატურული კარიერა==
 ==აბსურდიზმი==
 ==ცნობილი ნამუშევრები==
