*Empty MediaWiki Message*

--- a/დართლო.mw
+++ b/დართლო.mw
@@ -1,6 +1,6 @@
 [[სურათი:Dartlo-2400.jpg|thumb|დართლო 1892]]
 [[სურათი:Dartlo2-2400.jpg|thumb|დართლო 1992]]
-'''დართლო''', სოფელი [[ახმეტის რაიონი|ახმეტის რაიონში]], [[თუშეთი|თუშეთში]], [[პირიქითი ქედი|პირიქითი ქედის]] სამხრეთ კალთაზე, [[დიდხევი|მდინარე დიდხევის]] ([[პირიქითი ალაზანი|პირიქითი ალაზნის]] მარცხენა [[შენაკადი]]) მარჯვენა მხარეს. ზღვის დონიდან 2000 მ, ახმეტიდან 102 კმ. მიმოსვლა [[ცხენი|ცხენის]] [[ბილიკი|ბილიკით]] და [[საჰაერო გზა|საჰაერო გზით]].
+'''დართლო''', სოფელი [[ახმეტის რაიონი|ახმეტის რაიონში]], [[თუშეთი|თუშეთში]], [[პირიქითი ქედი|პირიქითი ქედის]] სამხრეთ კალთაზე, [[დიდხევი|მდინარე დიდხევის]] ([[პირიქითი ალაზანი|პირიქითი ალაზნის]] მარცხენა [[შენაკადი]]) მარჯვენა მხარეს. ზღვის დონიდან 2000 მ, [[ახმეტა|ახმეტიდან]] 102 კმ. მიმოსვლა [[ცხენი|ცხენის]] [[ბილიკი|ბილიკით]] და [[საჰაერო გზა|საჰაერო გზით]].
 
 
 
