--- a/ალბერ_კამიუ.mw
+++ b/ალბერ_კამიუ.mw
@@ -13,6 +13,26 @@
 1940 წელს კამიუ ცოლად ირთავს ფრანსინ ფორს, პიანისტსა და მათემატიკოსს. 1945 წლის 5 სექტემბერს მათი ტყუპები - კათერინ და ჟან კამიუები შეეძინათ. ამავე წელს კამიუ იწყებს ჟურნალში Paris-Soir (საღამოს პარიზი). მეორე მსოფლიო ომის პირველ პერიოდში კამიუ პაციფისტია, თუმცა ის პარიზში იმყოფებოდა ვერმახტის დროს. 1941 წლის 15 დეკემბერს კამიუ გაბრიელ პერის დახვრეტის მომსწრე გახდა, რამაც დასაბამი მისცა მის გერმანელთა წინააღმდეგ ამხედრებას. მომდევნო წლებში პარი-სუას დანარჩენ თანამშრომლებთან ერთად ბორდოში გადადის. ამავე წელს ის ასრულებს თავის პირველ წიგნებს - "უცნობი" და "მითი სისიფუსზე". 1942 წელს ცოტა ხნით ორანში, ალჟირი, ბრუნდება.
 
 ==ლიტერატურული კარიერა==
+ომის წლებში კამიუ ფრანგული წინააღმდეგობის მოძრაობა "კომბატს" უერთდება, რომელიც იატაკქვეშა გაზეთს უშვებს. ეს ჯგუფი ნაცისტების წინააღმდეგ შეთქმულებებს აწყობდა და კამიუს კოდური სახელი "ბოშარი" იყო. კამიუ გაზეთის რედაქტორი ხდება 1943 წელს და როცა მოკავშირეები პარიზში შევიდნენ კამიუ ბოლო ბრძოლებს აშუქებდა. 1947 წელს ის კომბატიდან წავიდა, ვინაიდან გაზეთი უბრალო კომერციულ გამოცემად გადაიქცა. სწორედ ამ პერიოდში ხვდება ის [[სარტრი, ჟან-პოლ|ჟან-პოლ სარტრს]].
+
+ომის შემდეგ კამიუ სარტრის ანტურაჟის წევრი და პარიზის [[სენ-ჟერმენი (ბულვარი)|სენ-ჟერმენის ბულვარზე]] [[კაფე დე ფლორი|კაფე დე ფლორის]] ხშირი სტუმარი ხდება. ამავე პერიოდში ის აშშ-შიც მოგზაურობს [[ფრანგული ეგზისტენციალიზმი|ფრანგულ ეგზისტენციალიზმზე]] ლექციების წასაკითხად. მიუხედავად პოლიტიკური მემარცხენეობისა მის მიერ კომუნისტური დოქტრინის მძაფრი კრიტიციზმი კომუნისტური პარტიებიდან უარყოფით გამოძახილს იწვევს და სარტრსაც ანაწყენებს.
+
+1949 წელს კამიუს ტუბერკულოზი გაურთულდა და ორი წელი განკერძოებულად სანატორიუმში გაატარა. 1951 წელს ის აქვეყნებს "ამბოხს", ფილოსოფიურ ანალიზს ამბოხსა და რევოლუციაზე, რომელშიც ხაზგასმით უარჰყოფს კომუნიზმს. წიგნმა მრავალი მისი კოლეგა და თანამედროვე გაანაწყენა საფრანგეთში და მისი სარტრთან საბოლოო განშორების საბაბი გახდა. მწვავე კრიტიკამ ის დეპრესიაში ჩააგდო და პოლიტიკისგან თავის ასარიდებლა პიესების თარგმნას იწყებს.
+
+კამიუს ყველაზე მნიშვნელოვანი წვლილი ფილოსოფიაში იყო მისი იდეა [[აბსურდი|აბსურდზე]], მსოფლიოს მრწამსში ჩაწვდომის ჩვენი სურვილისა და გარემოების, რომელიც ამის საშუალებას არ იძლევა, შედეგი, რომელიც მან "სისიფუსის მითში" აღწერა და შემდგომში მრავალ სხვა ნამუშევარში განავითარა. ამის გამო მრავალი კრიტიკოსი მას ახასიათებს არა როგორც ეგზისტენციალისტს, არამედ აბსურდისტს (ორივე განსაზღვრებას თავად კამიუ უარჰყოფდა).
+
+1950-იან წლებში კამიუ ადამიანთა უფლებების საკითხებს უთმობს საკუთარ თავს. 1952 წელს ის ტოვებს სამსახურს [[იუნესკო|იუნესკოში]], [[გაერო|გაეროს]] მიერ [[გენერალი ფრანკო|ფრანკოს]] ესპანეთის წევრად ცნობის გამო. 1953 წელს ის ერთ-ერთი იმ მცირე მემარცხენეთაგანი იყო, რომელმაც მწვავედ გააკრიტიკა აღმოსავლეთ ბერლინში მუშათა გაფიცვის ჩახშობის საბჭოთა მეთოდი. 1956 წელს მან იგივე მეთოდები გააპროტესტა უნგრეთში.
+
+სიცოცხლის განმავლობაში კამიუ [[პაციფიზმი|პაციფიზმის]] ერთგული და სიკვდილით დასჯის წინააღმდეგი დარჩა. ამ მხრივ მისი ყველაზე მნიშვნელოვანი წვლილი იყო კიოსტლერთან ერთად დაწეილი ესსე მსოფლიოს მასშტაბით სიკვდილის დასჯის გაუქმების მორალური ვალდებულების თაობაზე.
+
+1954 წელს [[ალჟირის დამოუკიდებლობის ომი|ალჟირში დამოუკიდებლობისთვის ომის]] დაწყება კამიუსთვის მორალური დილემა გახდა. ის თავს [[პიედ-ნუარი|პიედ-ნუარს]] მიაკუთვნებდა და იცავდა საფრანგეთის მთავრობას იმ მოსაზრებით, რომ ჩრდილოეთ აფრიკის კოლონიის აჯანყება ახალი არაბული იმპერიალიზმის განუყოფელი ნაწილი იყო, რომელსაც სათავეში ეგვიპტე და ანტი-დასავლური ისტერია ედგა რუსეთის მხარდაჭერით, რათა "ევროპა ალყაში მოექციათ და ამით აშშ-ს იზოლაცია მოეხდინათ". მიუხედავად იმისა, რომ კამიუ ალჟირის ფართო ავტონომიისა და ფედერაციის მომხრეც იყო, მას მიაჩნდა, რომ პიედ-ნუარებსა და არაბებს ერთად თანაცხოვრება შეეძლოთ. ფართომასშტაბიანი ომის დაწყების შემდეგ ის პოლიტიკურ კულუარებში სიკვდილ მისჯილ ალჟირელთა დახმარებისთვის იღწვის.
+
+1955-56 წლებში კამიუ ლ'ექსპრესისთვის მუშაობს. 1957 წელს მას ნობელის პრემიას ანიჭებენ ლიტარატურაში, ოფიციალურად არა მისი რომანისთვის "ვარდნა' (La Chute), არამედ სიკვდილის დასჯის პრაქტიკის წინააღმდეგ დაწერილი ესსესთვის "Réflexions Sur la Guillotine" (შეხედულებანი გილიოტინაზე). სტოკჰოლმის უნივერსიტეტში ლექციით გამოსვლისას სტუდენტებთან საუბარში ის ალჟირის საკითხში უმოქმედებას ალჟირში მცხოვრები დედის გამო ხსნის. ეს კიდევ უფრო რადიკალურ გამიჯვნას იწვევს მისდამი ფრანგ მემარცხენე ინტელექტუალებში.
+
+კამიუ გარდაიცვალა 1960 წლის 4 იანვარს ავტოავარიაში სენთან, ქალაქ ვილებლევინში. ბედის ირონიით, კამიუს ადრე უთქვამს, რომ ყველაზე აბსურდული სიკვდილი ავტოკატასტროფაში დაღუპვა იქნებოდა. დაკრძალულია ლურმარენის სასაფლაოზე, ლურმარენში, ვოკლუზი, პროვანს-ალპ-კოტ დ'აზური, საფრანგეთი.
+
+კამიუს ორი ნაწარმოები მისი სიკვდილი შემდეგ გამოქვეყნდა. პირველი იყო "უცნობის" ადრეული ვარიანტი სათაურით "ბედნიერი სიკვდილი" და 1970 წელს დაიბეჭდა. მეორე ნაშრომი იყო მისი დაუმთავრებელი რომანი "პირველი მამაკაცი". ეს იყო მისი ავტობიოგრაფიული ნაშრომი საკუთარ ბავშვობაზე ალჟირში და 1995 წელს გამოქვეყნდა.
+
 ==აბსურდიზმი==
 ==ცნობილი ნამუშევრები==
 ==კინოადაპტაციები==
