*Empty MediaWiki Message*

--- a/ალბერ_კამიუ.mw
+++ b/ალბერ_კამიუ.mw
@@ -1,4 +1,4 @@
-[[სურათი:Camus-albert.gif|thumb|ალბერ კამიუ]]
+[[სურათი:Camus-albert.gif|thumb|220px|ალბერ კამიუ]]
 '''ალბერ კამიუ''' (Albert Camus) ([[7 ნოემბერი]], [[1913]] - [[4 იანვარი]], [[1960]]) იყო [[ფრანგები|ფრანგი]] მწერალი და ფილოსოფოსი, [[აბსურდიზმი|აბსურდიზმის]] ერთ-ერთი ყველაზე ცნობილი მიმდევარი, ლიტერატურაში ნობელის პრემიის ერთ-ერთი ყველაზე ახალგაზრდა ლაურეატი. 
 
 ==ადრეული წლები==
