/* ქართული რესურსები ინტერნეტში */

--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -209,7 +209,7 @@
 *[http://www.cia.gov/cia/publications/factbook/geos/gg.html CIA World Factbook]
 *[http://www.president.gov.ge/ საქართველოს პრეზიდენტის ოფიციალური ვებ-გვერდი]
 *[http://www.parliament.ge საქართველოს პარლამენტი]
-*[http://www.visitgeorgia.ge/English/Information/General_information.htm'ეწვიეთ საქართველოს' - ინფორმაცია ტურისტებითვის]
+*[http://www.caucasustravel.com/ ეწვიეთ საქართველოს - ინფორმაცია ტურისტებითვის]
 *[http://www.caucasustravel.com/ კავკაზუს თრეველი]
 *[http://www.events.ge/ ჯორჯიან ივენთს]
 *[http://www.exploregeorgia.com/ ექსპლორ ჯორჯია]
