/* ქართული რესურსები ინტერნეტში */

--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -213,7 +213,7 @@
 *[http://www.caucasustravel.com/ კავკაზუს თრეველი]
 *[http://www.georgica.caucasus.net/ გეორგიკა]
 *[http://www.exploregeorgia.com/ ექსპლორ ჯორჯია]
-*[http://www.tedsnet.de Tedsnet.de - ფოტოები, გეოგრაფია, რუქები, კულტურა]
+*[http://www.tedsnet.de Tedsnet.de ფოტოები, გეოგრაფია, რუქები, კულტურა]
 *[http://www.world-gazetteer.com/s/p_ge.htm ქალაქების რუქები]
 *[http://www.exploregeorgia.com/ ექსპლორ ჯორჯია
 *[http://www.powertripthemovie.com/index2.html დოკუმენტური ფილმი ელექტროსისტემის მოდერნიზაციის მცდელობის შესახებ]
