/* ქართული რესურსები ინტერნეტში */

--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -215,7 +215,7 @@
 *[http://www.exploregeorgia.com/ ექსპლორ ჯორჯია]
 *[http://www.tedsnet.de Tedsnet.de ფოტოები, გეოგრაფია, რუქები, კულტურა]
 *[http://www.world-gazetteer.com/s/p_ge.htm ქალაქების რუქები]
-*[http://www.exploregeorgia.com/ ექსპლორ ჯორჯია
+*[http://www.exploregeorgia.com/ ექსპლორ ჯორჯია]
 *[http://www.powertripthemovie.com/index2.html დოკუმენტური ფილმი ელექტროსისტემის მოდერნიზაციის მცდელობის შესახებ]
 *[http://www.marxist.com/Asia/georgia_letter.html - ერთი სტუდენტის რეპორტაჟი 2003 წლის რევოლუციის შესახებ]
 *[http://www.eurasianet.org/resource/georgia/index.shtml რესურსები საქართველოზე - Eurasianet]
