Reverted edit of 212.58.119.102, changed back to last version by Zangala

--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -211,10 +211,10 @@
 *[http://www.parliament.ge საქართველოს პარლამენტი]
 *[http://www.caucasustravel.com/ ეწვიეთ საქართველოს - ინფორმაცია ტურისტებითვის]
 *[http://www.caucasustravel.com/ კავკაზუს თრეველი]
+*[http://www.events.ge/ ჯორჯიან ივენთს]
 *[http://www.exploregeorgia.com/ ექსპლორ ჯორჯია]
-*[http://www.tedsnet.de Tedsnet.de ფოტოები, გეოგრაფია, რუქები, კულტურა]
+*[http://www.tedsnet.de Tedsnet.de - ფოტოები, გეოგრაფია, რუქები, კულტურა]
 *[http://www.world-gazetteer.com/s/p_ge.htm ქალაქების რუქები]
-*[http://www.georgica.caucasus.net/ გეორგიკა]
 *[http://www.powertripthemovie.com/index2.html დოკუმენტური ფილმი ელექტროსისტემის მოდერნიზაციის მცდელობის შესახებ]
 *[http://www.marxist.com/Asia/georgia_letter.html - ერთი სტუდენტის რეპორტაჟი 2003 წლის რევოლუციის შესახებ]
 *[http://www.eurasianet.org/resource/georgia/index.shtml რესურსები საქართველოზე - Eurasianet]
@@ -224,7 +224,6 @@
 *[http://photo.hit.ge/forum/index.php?act=module&module=gallery&cmd=sc&cat=11 საქართველოს ისტორიული ძეგლების გალერეა]
 *[http://internet.ge ქართული საძიებო სისტემა]
 *[http://vaa.hit.ge გასართობ-შემეცნებითი პორტალი]
-*[http://www.visitgeorgia.ge/ ვიზიტ ჯორჯია]
 
 {{სუუამის ქვეყნები}}
 {{დსთ–ს ქვეყნები}}
