*Empty MediaWiki Message*

--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -225,7 +225,7 @@
 *[http://internet.ge ქართული საძიებო სისტემა]
 *[http://vaa.hit.ge გასართობ-შემეცნებითი პორტალი]
 
-{{სუამის ქვეყნები}}
+{{სუუამის ქვეყნები}}
 {{დსთ–ს ქვეყნები}}
 {{ევროპის ქვეყნები}}
 
