/* დემოგრაფია */  photo caption added

--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -163,8 +163,7 @@
 ==დემოგრაფია==
 ''ძირითადი სტატია:'' [[საქართველოს დემოგრაფია]]
 
-
-[[Image:Tiflis1.jpg|180px|right|Tbilisi]]
+[[Image:Tiflis1.jpg|200px|thumb|right|თბილისი 1990-იან წლებში]]
 [[2004]] წლის ივლისის ოფიციალური მონაცემების მიხედვით, საქართველოს ცენტრალური ხელისუფლების მიერ კონტროლირებად ტერიტორიაზე მოსახლეობა დაახლ. 4.700.000-ს  შეადგენს. მოსახლეობის ზრდის ტემპი შეადგენს 0,74%-ს.
 
 
