/* ისტორია */  improved layout

--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -183,8 +183,20 @@
 ==ისტორია==
 ''ძირითადი სტატია:'' [[საქართველოს ისტორია]]
 
+===დამოუკიდებლობის აღდგენა===
+'''უახლესი ისტორია'''. [[1990]] წლის [[28 ოქტომბერი|28 ოქტომბერს]] საქართველოში ჩატარდა პირველი მრავალპარტიული, დემოკრატიული საპარლამენტო არჩევნები, სადაც დამაჯერებელი გამარჯვება მოიპოვა ეროვნული პოლიტიკური პარტიებისა და ორგანიზაციების მემარჯვენე საარჩევნო ბლოკმა "მრგვალი მაგიდა - თავისუფალი საქართველო" (სპიკერი: [[გამსახურდია, ზვიად|ზვიად გამსახურდია]]). იმავე წლის [[14 ნოემბერი|14 ნოემბერს]], საქართველოს ახლადარჩეული [[საქართველოს რესპუბლიკის უზენაესი საბჭო|უზენაესი საბჭოს]] პირველ სესიაზე უზენაესი საბჭოს თავმჯდომარედ ერთხმად იქნა არჩეული ბ-ნი ზვიად კ. გამსახურდია (1939-1993). იმავე სესიაზე რესპუბლიკას ეწოდა "საქართველოს რესპუბლიკა", დამტკიცებულ იქნა ახალი სახელმწიფო სიმბოლიკა და სრული სახელმწიფოებრივი დამოუკიდებლობის აღდგენამდე გამოცხადდა გარდამავალი პერიოდი. 
 
-'''უახლესი ისტორია'''. [[1990]] წლის [[28 ოქტომბერი|28 ოქტომბერს]] საქართველოში ჩატარდა პირველი მრავალპარტიული, დემოკრატიული საპარლამენტო არჩევნები, სადაც დამაჯერებელი გამარჯვება მოიპოვა ეროვნული პოლიტიკური პარტიებისა და ორგანიზაციების მემარჯვენე საარჩევნო ბლოკმა "მრგვალი მაგიდა - თავისუფალი საქართველო" (სპიკერი: [[გამსახურდია, ზვიად|ზვიად გამსახურდია]]). იმავე წლის [[14 ნოემბერი|14 ნოემბერს]], საქართველოს ახლადარჩეული [[საქართველოს რესპუბლიკის უზენაესი საბჭო|უზენაესი საბჭოს]] პირველ სესიაზე უზენაესი საბჭოს თავმჯდომარედ ერთხმად იქნა არჩეული ბ-ნი ზვიად კ. გამსახურდია (1939-1993). იმავე სესიაზე რესპუბლიკას ეწოდა "საქართველოს რესპუბლიკა", დამტკიცებულ იქნა ახალი სახელმწიფო სიმბოლიკა და სრული სახელმწიფოებრივი დამოუკიდებლობის აღდგენამდე გამოცხადდა გარდამავალი პერიოდი. [[1991]] წლის [[31 მარტი|31 მარტს]] საქართველოში ჩატარდა საყოველთაო-სახალხო რეფერენდუმი, რომლის ერთადერთ კითხვას: "გსურთ თუ არა საქართველოს რესპუბლიკის სახელმწიფოებრივი დამოუკიდებლობის აღდგენა 1918 წლის 26 მაისის აქტის საფუძველზე?" დადებითი პასუხი გასცა ქვეყნის საარჩევნო ხმის უფლების მქონე მოსახლეობის 98%-მა. რეფერენდუმის შედეგების საფუძველზე, [[1991]] წლის  [[9 აპრილი|9 აპრილს]] საქართველოს რესპუბლიკის უზენაესმა საბჭომ მიიღო "საქართველოს სახელმწიფოებრივი დამოუკიდებლობის აღდგენის აქტი". იმავე დღეს [[აშშ]]-ის კონგრესმა საგანგებო რეზოლუციით ლეგიტიმურად სცნო 31 მარტის რეფერენდუმის შედეგები, რაც წარმოადგენდა საქართველოს დამოუკიდებლობის დე-ფაქტო ცნობას. [[1991]] წლის [[26 მაისი|26 მაისის]] პირველ საპრეზიდენტო არჩევნებში გაიმარჯვა ზვიად გამსახურდიამ. რადიკალური ოპოზიციის მოქმედების შედეგად,  [[1991]] წლის [[22 დეკემბერი|22 დეკემბრიდან]] თბილისში დაიწყო სამხედრო გადატრიალება, რაც დასრულდა [[1992]] წლის [[6 იანვარი|6 იანვარს]] პრეზიდენტ გამსახურდიას სამშობლოდან გაძევებით. ხელისუფლების სათავეში მოექცა სამხედრო საბჭო, რომელმაც იმავე წლის მარტში ძალაუფლება გადასცა ე.წ. "სახელმწიფო საბჭო"-ს (თავმჯდომარე: [[შევარდნაძე, ედუარდ|ე. შევარდნაძე]]). ქვეყანაში დამყარდა ედუარდ შევარდნაძის რეჟიმი, რომლის 12-წლიანი მმართველობა აღინიშნა ადამიანის უფლებებისა და ძირითად თავისუფლებათა უხეში და მასობრივი დარღვევებით, საქართველოს ტერიტორიული მთლიანობის რღვევით, ქვეყნის ტერიტორიაზე რუსეთის საოკუპაციო სამხედრო ბაზების დაკანონებით და ა.შ. პირველი პრეზიდენტის და მის მხარდამჭერთა წინააღმდეგ აღიძრა სისხლის სამართლის საქმე, ციხეებში აღმოჩნდა რამდენიმე ათეული პოლიტიკური პატიმარი. საქართველოში ეროვნულ-განმათავისუფლებელი მოძრაობის ახალი მძლავრი ტალღის აგორებამ [[1988]] წელს, შემდეგ კი საქართველოს მიერ სახელმწიფოებრივი  დამოუკიდებლობის გამოცხადებამ მძაფრი რეაქცია გამოიწვია მის ავტონომიურ წარმონაქმნებში, რასაც შედეგად მოჰყვა სამოქალაქო შეიარაღებული დაპირისპირება ([[1989]]-[[1993]]) და სეპარატისტული რეჟიმების ჩამოყალიბება აფხაზეთსა და ე.წ. სამხრეთ ოსეთში (შიდა ქართლში). [[1993]] წლის სექტემბერში სამშობლოში დაბრუნებულმა ზვიად გამსახურდიამ (ჩეჩნეთის დედაქალაქიდან იგი სამეგრელოში ჩაფრინდა) სცადა აფხაზეთის გადარჩენა და კანონიერი ხელისუფლების აღდგენა მაგრამ ე. შევარდნაძემ მოიწვია რუსეთის შავი ზღვის ფლოტის სამხედრო ხომალდები ადმირალ ბალტინის მეთაურობით და დახმარების შემთხვევაში რუსეთს აღუთქვა საქართველოს დსთ-ში შეყვანა. ამან გადაწყვიტა კანონიერი პრეზიდენტისა და მისი ხელისუფლების ბედი. სამეგრელოს მაღალმთიან, ტყიან მასივში გახიზნული პრეზიდენტი გაურკვეველ ვითარებაში დაიღუპა [[1993]] წლის [[31 დეკემბერი|31 დეკემბერს]]. [[2003]] წლის [[2 ნოემბერი|2 ნოემბრის]] საპარლამენტო არჩევნების შედეგების ტოტალურმა გაყალბებამ გამოიწვია საერთო-სახალხო მღელვარება, რაც გაგვირგვინდა [[2003]] წლის [[23 ნოემბერი|23 ნოემბრის]] მშვიდობიანი, უსისხლო რევოლუციით, რომელიც საქართველოს "ვარდების რევოლუციის" სახელით არის ცნობილი. ამით დასრულდა ე. შევარდნაძის რეჟიმის 12-წლიანი ბატონობა. ქვეყნის ახალი პრეზიდენტის [[სააკაშვილი, მიხეილ|მიხეილ სააკაშვილის]] თაოსნობით საქართველო კვლავ დაადგა დემოკრატიისა და ეროვნული სახელმწიფოებრიობის აღმშენებლობის გზას. სრულად იქნა რეაბილიტირებული პირველი პრეზიდენტი ზვიად გამსახურდია.
+[[1991]] წლის [[31 მარტი|31 მარტს]] საქართველოში ჩატარდა საყოველთაო-სახალხო რეფერენდუმი, რომლის ერთადერთ კითხვას: "გსურთ თუ არა საქართველოს რესპუბლიკის სახელმწიფოებრივი დამოუკიდებლობის აღდგენა 1918 წლის 26 მაისის აქტის საფუძველზე?" დადებითი პასუხი გასცა ქვეყნის საარჩევნო ხმის უფლების მქონე მოსახლეობის 98%-მა. რეფერენდუმის შედეგების საფუძველზე, [[1991]] წლის  [[9 აპრილი|9 აპრილს]] საქართველოს რესპუბლიკის უზენაესმა საბჭომ მიიღო "საქართველოს სახელმწიფოებრივი დამოუკიდებლობის აღდგენის აქტი". იმავე დღეს [[აშშ]]-ის კონგრესმა საგანგებო რეზოლუციით ლეგიტიმურად სცნო 31 მარტის რეფერენდუმის შედეგები, რაც წარმოადგენდა საქართველოს დამოუკიდებლობის დე-ფაქტო ცნობას. 
+
+===სამხედრო გადატრიალება===
+[[1991]] წლის [[26 მაისი|26 მაისის]] პირველ საპრეზიდენტო არჩევნებში გაიმარჯვა ზვიად გამსახურდიამ. რადიკალური ოპოზიციის მოქმედების შედეგად,  [[1991]] წლის [[22 დეკემბერი|22 დეკემბრიდან]] თბილისში დაიწყო სამხედრო გადატრიალება, რაც დასრულდა [[1992]] წლის [[6 იანვარი|6 იანვარს]] პრეზიდენტ გამსახურდიას სამშობლოდან გაძევებით. ხელისუფლების სათავეში მოექცა [[სამხედრო საბჭო]], რომელმაც იმავე წლის მარტში ძალაუფლება გადასცა ე.წ. "სახელმწიფო საბჭო"-ს (თავმჯდომარე: [[შევარდნაძე, ედუარდ|ე. შევარდნაძე]]). 
+
+ქვეყანაში დამყარდა ედუარდ შევარდნაძის რეჟიმი, რომლის 12-წლიანი მმართველობა აღინიშნა ადამიანის უფლებებისა და ძირითად თავისუფლებათა უხეში და მასობრივი დარღვევებით, საქართველოს ტერიტორიული მთლიანობის რღვევით, ქვეყნის ტერიტორიაზე რუსეთის საოკუპაციო სამხედრო ბაზების დაკანონებით და ა.შ. პირველი პრეზიდენტის და მის მხარდამჭერთა წინააღმდეგ აღიძრა სისხლის სამართლის საქმე, ციხეებში აღმოჩნდა რამდენიმე ათეული პოლიტიკური პატიმარი. 
+
+საქართველოში ეროვნულ-განმათავისუფლებელი მოძრაობის ახალი მძლავრი ტალღის აგორებამ [[1988]] წელს, შემდეგ კი საქართველოს მიერ სახელმწიფოებრივი  დამოუკიდებლობის გამოცხადებამ მძაფრი რეაქცია გამოიწვია მის ავტონომიურ წარმონაქმნებში, რასაც შედეგად მოჰყვა სამოქალაქო შეიარაღებული დაპირისპირება ([[1989]]-[[1993]]) და სეპარატისტული რეჟიმების ჩამოყალიბება აფხაზეთსა და ე.წ. სამხრეთ ოსეთში (შიდა ქართლში). [[1993]] წლის სექტემბერში სამშობლოში დაბრუნებულმა ზვიად გამსახურდიამ (ჩეჩნეთის დედაქალაქიდან იგი სამეგრელოში ჩაფრინდა) სცადა აფხაზეთის გადარჩენა და კანონიერი ხელისუფლების აღდგენა, მაგრამ ე. შევარდნაძემ მოიწვია რუსეთის შავი ზღვის ფლოტის სამხედრო ხომალდები ადმირალ ბალტინის მეთაურობით და დახმარების შემთხვევაში რუსეთს აღუთქვა საქართველოს დსთ-ში შეყვანა. ამან გადაწყვიტა კანონიერი პრეზიდენტისა და მისი ხელისუფლების ბედი. სამეგრელოს მაღალმთიან, ტყიან მასივში გახიზნული პრეზიდენტი გაურკვეველ ვითარებაში დაიღუპა [[1993]] წლის [[31 დეკემბერი|31 დეკემბერს]]. 
+
+===შევარდნაძის გადაყენება===
+[[2003]] წლის [[2 ნოემბერი|2 ნოემბრის]] საპარლამენტო არჩევნების შედეგების ტოტალურმა გაყალბებამ გამოიწვია საერთო-სახალხო მღელვარება, რაც გაგვირგვინდა [[2003]] წლის [[23 ნოემბერი|23 ნოემბრის]] მშვიდობიანი, უსისხლო რევოლუციით, რომელიც საქართველოს "ვარდების რევოლუციის" სახელით არის ცნობილი. ამით დასრულდა ე. შევარდნაძის რეჟიმის 12-წლიანი ბატონობა. ქვეყნის ახალი პრეზიდენტის [[სააკაშვილი, მიხეილ|მიხეილ სააკაშვილის]] თაოსნობით საქართველო კვლავ დაადგა დემოკრატიისა და ეროვნული სახელმწიფოებრიობის აღმშენებლობის გზას. სრულად იქნა რეაბილიტირებული პირველი პრეზიდენტი ზვიად გამსახურდია.
 
 ==კულტურა==
 ''ძირითადი სტატია:'' [[საქართველოს კულტურა]]
