/* ისტორია */  გადაერქვა "უახლესი ისტორია"

--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -180,11 +180,11 @@
 გრძელდება საბაზრო რეფორმების განხორციელება. ეკონომიკის მთავარი დარგებია სოფლის მეურნეობა (ჩაი, ციტრუსი, ხილი, თამბაქო, ღვინო), მანქანათმშენებლობა, მეტალურგია, ჰიდრორესურსები. დიდი ყურადღება ეთმობა საკურორტო-ტურისტული კომპლექსის აღდგენას, რომელიც ადრე ყოველწლიურად 2 მლნ ადამიანს ემსახურებოდა. სოფლის მეურნეობის პროდუქცია (ყურძენი, ჩაი, ციტრუსები); მთავარი სავაჭრო პარტნიორებია რუსეთი (18%), თურქეთი (14%), აზერბაიჯანი (12%) და აშშ (6%). • ერთობლივი ეროვნული პროდუქტი: სტრუქტურა (%) - სოფლის მეურნეობა 32; 1 სულ მოსახლეზე - 860 $. • ვალუტა - ქართული ლარი (GEL).
 
 
-==ისტორია==
+==უახლესი ისტორია==
 ''ძირითადი სტატია:'' [[საქართველოს ისტორია]]
 
 ===დამოუკიდებლობის აღდგენა===
-'''უახლესი ისტორია'''. [[1990]] წლის [[28 ოქტომბერი|28 ოქტომბერს]] საქართველოში ჩატარდა პირველი მრავალპარტიული, დემოკრატიული საპარლამენტო არჩევნები, სადაც დამაჯერებელი გამარჯვება მოიპოვა ეროვნული პოლიტიკური პარტიებისა და ორგანიზაციების მემარჯვენე საარჩევნო ბლოკმა "მრგვალი მაგიდა - თავისუფალი საქართველო" (სპიკერი: [[გამსახურდია, ზვიად|ზვიად გამსახურდია]]). იმავე წლის [[14 ნოემბერი|14 ნოემბერს]], საქართველოს ახლადარჩეული [[საქართველოს რესპუბლიკის უზენაესი საბჭო|უზენაესი საბჭოს]] პირველ სესიაზე უზენაესი საბჭოს თავმჯდომარედ ერთხმად იქნა არჩეული ბ-ნი ზვიად კ. გამსახურდია (1939-1993). იმავე სესიაზე რესპუბლიკას ეწოდა "საქართველოს რესპუბლიკა", დამტკიცებულ იქნა ახალი სახელმწიფო სიმბოლიკა და სრული სახელმწიფოებრივი დამოუკიდებლობის აღდგენამდე გამოცხადდა გარდამავალი პერიოდი. 
+[[1990]] წლის [[28 ოქტომბერი|28 ოქტომბერს]] საქართველოში ჩატარდა პირველი მრავალპარტიული, დემოკრატიული საპარლამენტო არჩევნები, სადაც დამაჯერებელი გამარჯვება მოიპოვა ეროვნული პოლიტიკური პარტიებისა და ორგანიზაციების მემარჯვენე საარჩევნო ბლოკმა "მრგვალი მაგიდა - თავისუფალი საქართველო" (სპიკერი: [[გამსახურდია, ზვიად|ზვიად გამსახურდია]]). იმავე წლის [[14 ნოემბერი|14 ნოემბერს]], საქართველოს ახლადარჩეული [[საქართველოს რესპუბლიკის უზენაესი საბჭო|უზენაესი საბჭოს]] პირველ სესიაზე უზენაესი საბჭოს თავმჯდომარედ ერთხმად იქნა არჩეული ბ-ნი ზვიად კ. გამსახურდია (1939-1993). იმავე სესიაზე რესპუბლიკას ეწოდა "საქართველოს რესპუბლიკა", დამტკიცებულ იქნა ახალი სახელმწიფო სიმბოლიკა და სრული სახელმწიფოებრივი დამოუკიდებლობის აღდგენამდე გამოცხადდა გარდამავალი პერიოდი. 
 
 [[1991]] წლის [[31 მარტი|31 მარტს]] საქართველოში ჩატარდა საყოველთაო-სახალხო რეფერენდუმი, რომლის ერთადერთ კითხვას: "გსურთ თუ არა საქართველოს რესპუბლიკის სახელმწიფოებრივი დამოუკიდებლობის აღდგენა 1918 წლის 26 მაისის აქტის საფუძველზე?" დადებითი პასუხი გასცა ქვეყნის საარჩევნო ხმის უფლების მქონე მოსახლეობის 98%-მა. რეფერენდუმის შედეგების საფუძველზე, [[1991]] წლის  [[9 აპრილი|9 აპრილს]] საქართველოს რესპუბლიკის უზენაესმა საბჭომ მიიღო "საქართველოს სახელმწიფოებრივი დამოუკიდებლობის აღდგენის აქტი". იმავე დღეს [[აშშ]]-ის კონგრესმა საგანგებო რეზოლუციით ლეგიტიმურად სცნო 31 მარტის რეფერენდუმის შედეგები, რაც წარმოადგენდა საქართველოს დამოუკიდებლობის დე-ფაქტო ცნობას. 
 
