*Empty MediaWiki Message*

--- a/დავით_ოძელაშვილი.mw
+++ b/დავით_ოძელაშვილი.mw
@@ -1,6 +1,9 @@
 '''ოძელაშვილი, დავით''', ''ოძელა'' (* დაიბადა [[19??]], ქალ. [[თბილისში]] ―     †  [[2002]], [[ვენა]])
 
-==
+!!! გთხოვთ ყველას ვისაც რამე იმფორმაცია მოგეპოვებათ შეავსოთ სტატია !!!
+
+დათომ ჩაწერა 1998 წელს, ოთარ მაღრაძესთან ერთად ორი კომპოზიცია ახალი ალბომისათვის: "თათრის მოედანი" და "გურული ჩანახატები".
+
 
 [[კატეგორია: ქართველები]]
 [[კატეგორია: მუსიკოსი]]
