--- a/ნინო_ბურჯანაძე.mw
+++ b/ნინო_ბურჯანაძე.mw
@@ -15,7 +15,7 @@
 
 
 ==სამსახურებრივი საქმიანობა==
-
+[[სურათი:Nino Burdschanadse.jpg|thumb|პარლამენტის თავმჯდომარე]]
 *[[1991]]-დან - მუშაობს თბილისის სახელმწიფო უნივერსიტეტის საერთაშორისო სამართლის კათედრის დოცენტის თანამდებობაზე. 
 * [[1991]]-[[1992|92]] - საქართველოს ეკოლოგიის სამინისტროს ექსპერტ-კონსულტანტი. 
 * [[1992]]-[[1995|95]] - საქართველოს პარლამენტის საგარეო ურთიერეთობათა კომისიის ექსპერტ-კონსულტანტი. 
