*Empty MediaWiki Message*

--- a/დავით_ოძელაშვილი.mw
+++ b/დავით_ოძელაშვილი.mw
@@ -1,4 +1,5 @@
-'''ოძელაშვილი, დავით''', ''ოძელა'' (* დაიბადა [[19??]], ქალ. [[თბილისში]] ―     †  [[2002]], [[ვენა]])
+[[სურათი:D odzela.jpg|thumb|''ოძელა'']]
+'''ოძელაშვილი, დავით''', ''ოძელა'' (*  [[19??]],  [[თბილისი|თბილისში]] ―     †  [[2002]], [[ვენა]])
 
 !!! გთხოვთ ყველას ვისაც რამე იმფორმაცია მოგეპოვებათ შეავსოთ სტატია !!!
 
@@ -6,6 +7,7 @@
 
 
 [[კატეგორია: ქართველები]]
-[[კატეგორია: მუსიკოსი]]
+[[კატეგორია: ქართველი მუსიკოსები]]
 [[კატეგორია: ფლეიტისტი]]
-[[კატეგორია:გარდაცვლილი 1842]]
+[[კატეგორია:დაბადებული ....]]  
+[[კატეგორია:გარდაცვლილი 2002]]
