--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -199,15 +199,14 @@
 [[2003]] წლის [[2 ნოემბერი|2 ნოემბრის]] საპარლამენტო არჩევნების შედეგების ტოტალურმა გაყალბებამ გამოიწვია საერთო-სახალხო მღელვარება, რაც გაგვირგვინდა [[2003]] წლის [[23 ნოემბერი|23 ნოემბრის]] მშვიდობიანი, უსისხლო რევოლუციით, რომელიც საქართველოს "ვარდების რევოლუციის" სახელით არის ცნობილი. ამით დასრულდა ე. შევარდნაძის რეჟიმის 12-წლიანი ბატონობა. ქვეყნის ახალი პრეზიდენტის [[სააკაშვილი, მიხეილ|მიხეილ სააკაშვილის]] თაოსნობით საქართველო კვლავ დაადგა დემოკრატიისა და ეროვნული სახელმწიფოებრიობის აღმშენებლობის გზას. სრულად იქნა რეაბილიტირებული პირველი პრეზიდენტი ზვიად გამსახურდია.
 
 ==კულტურა==
+[[Image:Shota_Rustaveli.jpg|thumb|220px|შოთა რუსთაველი]]
 ''ძირითადი სტატია:'' [[საქართველოს კულტურა]]
 
 
-[[Image:Shota_Rustaveli.jpg|thumb|შოთა რუსთაველი]]
 *'''არქიტექტურა''': ქალაქი-მუზეუმი მცხეთა, გელათის სამონასტრო კომპლექსი, თბილისის ისტორიული ცენტრი, უფლისციხის და ვარძიის კლდეში ნაკვეთი კომპლექსები, დავით გარეჯის და შიო მღვიმის კომპლექსები; ბაგრატის ტაძარი; ზემო სვანეთი; 
 *'''ლიტერატურა''': ქართული ეპოსი - ვეფხისტყაოსანი ([[შოთა რუსთაველი]], XIII ს.). 
 *'''თეატრი''': ფალიაშვილის სახ. ოპერისა და ბალეტის (თბილისი, 1851), რუსთაველის სახ. დრამატული (თბილისი, 1821), მარჯანიშვილის სახ. დრამატული (თბილისი, 1928). 
 *'''კულტურის თავისებურებები''': პოლიფონიური სიმღერა, ორიგინალური დამწერლობა.
-
 
 ==შეიარაღებული ძალები==
 
