--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -204,7 +204,7 @@
 
 
 *'''არქიტექტურა''': ქალაქი-მუზეუმი მცხეთა, გელათის სამონასტრო კომპლექსი, თბილისის ისტორიული ცენტრი, უფლისციხის და ვარძიის კლდეში ნაკვეთი კომპლექსები, დავით გარეჯის და შიო მღვიმის კომპლექსები; ბაგრატის ტაძარი; ზემო სვანეთი; 
-*'''ლიტერატურა''': ქართული ეპოსი - ვეფხისტყაოსანი ([[შოთა რუსთაველი]], XIII ს.). 
+*'''ლიტერატურა''': ქართული ეპოსი - [[ვეფხისტყაოსანი]] ([[შოთა რუსთაველი]], XIII ს.). 
 *'''თეატრი''': ფალიაშვილის სახ. ოპერისა და ბალეტის (თბილისი, 1851), რუსთაველის სახ. დრამატული (თბილისი, 1821), მარჯანიშვილის სახ. დრამატული (თბილისი, 1928). 
 *'''კულტურის თავისებურებები''': პოლიფონიური სიმღერა, ორიგინალური დამწერლობა.
 
