*Empty MediaWiki Message*

--- a/დავით_ოძელაშვილი.mw
+++ b/დავით_ოძელაშვილი.mw
@@ -1,13 +1,13 @@
 [[სურათი:D odzela.jpg|thumb|''ოძელა'']]
-'''ოძელაშვილი, დავით''', ''ოძელა'' (*  [[19??]],  [[თბილისი|თბილისში]] ―     †  [[2002]], [[ვენა]])
+'''დავით ოძელაშვილი''', ''ოძელა'' (*  [[19??]],  [[თბილისი|თბილისში]] ―     †  [[2002]], [[ვენა]])
 
 !!! გთხოვთ ყველას ვისაც რამე იმფორმაცია მოგეპოვებათ შეავსოთ სტატია !!!
 
 დათომ ჩაწერა 1998 წელს, ოთარ მაღრაძესთან ერთად ორი კომპოზიცია ახალი ალბომისათვის: "თათრის მოედანი" და "გურული ჩანახატები".
 
-
+{{ესკიზი}}
 [[კატეგორია: ქართველები]]
 [[კატეგორია: ქართველი მუსიკოსები]]
-[[კატეგორია: ფლეიტისტი]]
+[[კატეგორია: ფლეიტისტები]]
 [[კატეგორია:დაბადებული ....]]  
 [[კატეგორია:გარდაცვლილი 2002]]
