*Empty MediaWiki Message*

--- a/დავით_ოძელაშვილი.mw
+++ b/დავით_ოძელაშვილი.mw
@@ -1,7 +1,5 @@
 [[სურათი:D odzela.jpg|thumb|''ოძელა'']]
-'''დავით ოძელაშვილი''', ''ოძელა'' (*  [[19??]],  [[თბილისი|თბილისში]] ―     †  [[2002]], [[ვენა]])
-
-!!! გთხოვთ ყველას ვისაც რამე იმფორმაცია მოგეპოვებათ შეავსოთ სტატია !!!
+'''დავით ოძელაშვილი''', ''ოძელა'' (*  [[19??]],  [[თბილისი|თბილისში]] ―     †  [[2002]], [[ვენა]], [[ავსტრია]])
 
 დათომ ჩაწერა 1998 წელს, ოთარ მაღრაძესთან ერთად ორი კომპოზიცია ახალი ალბომისათვის: "თათრის მოედანი" და "გურული ჩანახატები".
 
