--- a/ბერთოლდი_(ბადენი).mw
+++ b/ბერთოლდი_(ბადენი).mw
@@ -8,3 +8,7 @@
 * მარგარეტე (* [[14 ივლისი]] [[1932]])
 * მაქსიმილიანი (* [[3 ივლისი]] [[1933]]
 * ლუდვიგი (* [[16 მარტი]] [[1937]])
+
+
+[[de:Berthold von Baden]]
+[[no:Berthold av Baden]]
