--- a/ბერთოლდი_(ბადენი).mw
+++ b/ბერთოლდი_(ბადენი).mw
@@ -10,5 +10,10 @@
 * ლუდვიგი (* [[16 მარტი]] [[1937]])
 
 
+[[კატეგორია:გერმანელები]]
+[[კატეგორია:დაბადებული 1906]]
+[[კატეგორია:გარდაცვლილი 1963]]
+
+
 [[de:Berthold von Baden]]
 [[no:Berthold av Baden]]
