--- a/ზალმი_(დინასტია).mw
+++ b/ზალმი_(დინასტია).mw
@@ -15,3 +15,10 @@
 * ზალმ-ზალმი. მამული: [[ანჰოლტის ციხე-სიმაგრე]] [[ისელბურგი|ისელბურგში]].
 * ზალმ-კირბურგი ([[1743]] წლიდან რაიხსფიურსტები, † [[1905]])
 * ზალმ-ჰორსტმარ-გრუმბახი ([[1816]] წლიდან ფიურსტ ფონ ჰორსტმარი]].
+
+
+[[de: Salm (Adel)]]
+[[fr:Principauté de Salm]]
+[[ru:Зальм]]
+[[en:Salm-Salm]]
+[[nl:Salm (geslacht)]]
