*Empty MediaWiki Message*

--- a/ნიკოლოზ_აარონი.mw
+++ b/ნიკოლოზ_აარონი.mw
@@ -1,10 +1,13 @@
-ნიკოლაი აარონი ([[რუსული ენა|რუს.]]: Николай Аарон) (* [[17 აგვისტო]] [[1956]], [[სმოლენსკი]], [[ბელარუსი]]) - ბელარუსი წარმოშობის მხატვარი და მწერალი.
+'''ნიკოლაი აარონი''' ([[რუსული ენა|რუს.]]: Николай Аарон) (* [[17 აგვისტო]], [[1956]], [[სმოლენსკი]], [[ბელარუსი]]) - ბელარუსი წარმოშობის მხატვარი და მწერალი.
 
 
 
 ==ბიოგრაფია==
-ნიკოლაი აარონი ბავშვი იყო, როცა მისი ოჯახი [[ავსტრია|ავსრიაში]], [[ვენა (ქალაქი)|ვენაში]] გადასახლდა. XX საუკუნის 90-იან წლებში იგი ჯერ [[პარიზი|პარიზში]], შემდეგ კი [[აშშ]]-ში გადასახლდა, სადაც მოღავწეობს, როგორც მხატვარი, მწერალი და ხელოვნებათმცოდნე.
+ნიკოლაი აარონი ბავშვი იყო, როცა მისი ოჯახი [[ავსტრია|ავსრიაში]], [[ვენა (ქალაქი)|ვენაში]] გადასახლდა. XX საუკუნის 90-იან წლებში იგი ჯერ [[პარიზი|პარიზში]], შემდეგ კი [[აშშ|აშშ-ში]] გადასახლდა, სადაც მოღვაწეობს, როგორც მხატვარი, მწერალი და ხელოვნებათმცოდნე.
 
 ==ლიტერატურა==
 
 • Nikolaj Aaron, Marc Chagall., (rororo-Monographie) Reinbek 2003, ISBN 3499506564
+
+
+[[de:Nikolaj Aaron]]
