*Empty MediaWiki Message*

--- a/იოაჰიმ_მიურატი.mw
+++ b/იოაჰიმ_მიურატი.mw
@@ -1,5 +1,1 @@
-[[სურათი:François Pascal Simon Gérard 005.jpg|thumb|იოახიმ მიურატი]]
-'''იოახიმ მიურატი''' (''[[ფრანგული ენა|ფრანგ.]]:'' Joachim Murat; ''[[ქართული ენა|ქართ.]]:'' ჟოაკინ მიურა) (* [[25 მარტი]] [[1767]], [[ლაბასტიდ-ფურტიურნიე]], ''დღ.'' [[ლაბასტიდ-მიურა]], [[საფრანგეთი]]; † [[13 ოქტომბერი]] [[1815]], [[პიცო]], [[კალაბრია]]) - [[ნეაპოლის სამეფო|ნეაპოლის მეფე]] [[1808]]-[[1815]] წლებში, [[ბონაპარტი, ნაპოლეონ|ნაპოლეონის]] სიძე და [[საფრანგეთის მარშალი]].
-
-
-==ბიოგრაფია==
+{{მიურა, ჟოაკიმ}}
