*Empty MediaWiki Message*

--- a/ველფ_V.mw
+++ b/ველფ_V.mw
@@ -5,3 +5,8 @@
 ველფ V მთელი თავისი სიცოცხლის განმავლობაში იმპერატორის ერთგული დარჩა და ბავარიის საჰერცოგოს მართავდა. გარდა იმისა, რომ იგი იმპერატორს იტალიურ ლაშქრობებში ეხმარებოდა მისი მმართველობის შესახებ თითქმის არაფერია ცნობილი. ველფ V დამარხულ იქნა ვენახში.
 
 იგი მეორედ არ დაქორწინებულა და უშვილოდ გარდაიცვალა. მის შემდეგ ბავარიის ჰერცოგი გახდა ძმა [[ჰაინრიხ შავი]].
+
+
+
+[[de:Welf V.]]
+[[en:Welf II, Duke of Bavaria]]
