--- a/ჰაინრიხ_შავი.mw
+++ b/ჰაინრიხ_შავი.mw
@@ -13,3 +13,7 @@
 * მათილდე († 1103) – 1. ∞ მარკგრაფი [[დიპოლდ IV ფონ ფობურგი]], 2. ∞ გრაფი გებჰარდ III ფონ ზულცბახი.
 * [[ველფ VI]] (* 1115; † 1191) – [[სპოლეტო|სპოლეტოს]] ჰერცოგი.
 * ვულფჰილდი († 1160 შემდეგ) - ∞ გრაფი რუდოლფ ფონ ბრეგენცი.
+
+
+[[de:Heinrich der Schwarze]]
+[[en:Henry IX, Duke of Bavaria]]
