--- a/ბერთოლდ_III_(ცერინგენი).mw
+++ b/ბერთოლდ_III_(ცერინგენი).mw
@@ -6,3 +6,8 @@
 ბერთოლდ III-ის მეუღლე იყო ბავარიის ჰერცოგ [[ჰაინრიხ შავი|ჰაინრიხ შავის]] ასული სოფი.
 
 ქალაქ ფრაიბურგის ცენტრალური ქუჩა ბერთოლდშტრასე და ცნობილი შადრევანი ბერთოლდსბრუნე მის სახელ ატარებს.
+
+
+
+[[de:Berthold III. (Zähringen)]]
+[[it:Berthold III di Zähringen]]
